--- a/GY/Views/Movies/Index.cshtml
+++ b/GY/Views/Movies/Index.cshtml
@@ -236,15 +236,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="drop-navigation drop-navigation">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><a href="index.html" class="home-icon"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>主页</a></li>
-                    <li><a href="shows.html" class="user-icon"><span class="glyphicon glyphicon-home glyphicon-blackboard" aria-hidden="true"></span>TV Shows</a></li>
+                    <li class=""><a href="@Url.Action("Index","Index")" class="home-icon"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>主页</a></li>
+                    <li><a href="@Url.Action("Index","Festive")" class="user-icon"><span class="glyphicon glyphicon-home glyphicon-blackboard" aria-hidden="true"></span>TV Shows</a></li>
                     <li><a href="history.html" class="sub-icon"><span class="glyphicon glyphicon-home glyphicon-hourglass" aria-hidden="true"></span>社区</a></li>
                     <li><a href="#" class="menu1"><span class="glyphicon glyphicon-film" aria-hidden="true"></span>电影观赏<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a></li>
                     <ul class="cl-effect-2">
-                        <li><a href="movies.html">英语</a></li>
-                        <li><a href="movies.html">汉语</a></li>
-                        <li><a href="movies.html">印度语</a></li>
-                        <li><a href="movies.html">泰语</a></li>
+                        <li><a href="@Url.Action("Index","Movies")">英语</a></li>
+                        <li><a href="@Url.Action("Index","Movies")">汉语</a></li>
+                        <li><a href="@Url.Action("Index","Movies")">印度语</a></li>
+                        <li><a href="@Url.Action("Index","Movies")">泰语</a></li>
                     </ul>
                     <!-- script-for-menu -->
                     <script>
@@ -256,12 +256,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </script>
                     <li><a href="#" class="menu"><span class="glyphicon glyphicon-film glyphicon-king" aria-hidden="true"></span>电影活动<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a></li>
                     <ul class="cl-effect-1">
-                        <li><a href="sports.html">足球</a></li>
-                        <li><a href="sports.html">板球</a></li>
-                        <li><a href="sports.html">篮球</a></li>
+                        <li><a href="@Url.Action("Index","Active")">足球</a></li>
+                        <li><a href="@Url.Action("Index","Active")">板球</a></li>
+                        <li><a href="@Url.Action("Index","Active")">篮球</a></li>
 
                     </ul>
-                    <!-- script-for-menu -->
                     <script>
 							$( "li a.menu" ).click(function() {
 							$( "ul.cl-effect-1" ).slideToggle( 300, function() {
@@ -270,30 +269,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							});
                     </script>
                     @*<li><a href="movies.html" class="song-icon"><span class="glyphicon glyphicon-music" aria-hidden="true"></span>电影音乐</a></li>*@
-                    <li><a href="news.html" class="news-icon"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>新闻资讯</a></li>
+                    <li><a href="@Url.Action("Index","News")" class="news-icon"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>新闻资讯</a></li>
                 </ul>
-                <!-- script-for-menu -->
-                <script>
+                    <!-- script-for-menu -->
+                    <script>
 							$( ".top-navigation" ).click(function() {
 							$( ".drop-navigation" ).slideToggle( 300, function() {
 							// Animation complete.
 							});
 							});
-                </script>
-                <div class="side-bottom">
-                    <div class="side-bottom-icons">
-                        <ul class="nav2">
-                            <li><a href="#" class="facebook"> </a></li>
-                            <li><a href="#" class="facebook twitter"> </a></li>
-                            <li><a href="#" class="facebook chrome"> </a></li>
-                            <li><a href="#" class="facebook dribbble"> </a></li>
-                        </ul>
+                    </script>
+                    <div class="side-bottom">
+                        <div class="side-bottom-icons">
+                            <ul class="nav2">
+                                <li><a href="#" class="facebook"> </a></li>
+                                <li><a href="#" class="facebook twitter"> </a></li>
+                                <li><a href="#" class="facebook chrome"> </a></li>
+                                <li><a href="#" class="facebook dribbble"> </a></li>
+                            </ul>
+                        </div>
+                        <div class="copyright">
+                            <p>Copyright &copy; 2018.Company name All rights reserved.More Templates <a href="" target="_blank" title="江西师范大学">江西师范大学</a> - Collect from <a href="#" title="3522-1工作室" target="_blank">3522-1工作室</a></p>
+                        </div>
                     </div>
-                    <div class="copyright">
-                        <p>Copyright &copy; 2018.Company name All rights reserved.More Templates <a href="" target="_blank" title="江西师范大学">江西师范大学</a> - Collect from <a href="#" title="3522-1工作室" target="_blank">3522-1工作室</a></p>
-                    </div>
-                </div>
-            </div>
+</div>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <div class="show-top-grids">
